@@ -21,3 +21,4 @@ For 1.2 Branch
 
   o Update Windows libtiff to version 3.7.X.
 
+  o Update Windows lcms to version 1.14.
